Replace new Integer() with valueOf()
Using Integer.valueOf() instead of new Integer(). This saves memory as instances of common numbers such as 0 and 1 have already been instantiated.